--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Our submission for 2025 cornhacks",
   "main": "./wwwroot/core.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
